reasoning_transformations/CRUXEval/Transformations/logs/sample_151.log
STARTING AT 2024-10-19 21:58:30.698891
[START] processing file: sample_151
*Running tests for: sample_151
 
Result: ['tests_pass']
tests_pass sample_151 /home/yang/Benchmark/dataset/cruxeval/code//sample_151.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_151
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_151", line 9
    nonlocal newc_1
    ^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'newc_1' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_151", line 9\n    nonlocal newc_1\n    ^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'newc_1\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_151
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_151
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_151.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_151.py
*Running tests for: sample_151
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_151.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_151',
  'genetic_algorithm': None,
  'original_code': 'def f(text):\n'
                   '    for c in text:\n'
                   '        if c.isdigit():\n'
                   "            if c == '0':\n"
                   "                c = '.'\n"
                   '            else:\n'
                   "                c = '0' if c != '1' else '.'\n"
                   "    return ''.join(list(text)).replace('.', '0')",
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_151.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_151.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_151.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.302942,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      "    parse('2024-10-19 21:58:34')\n"
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(text):\n'
                      "    base64.b64encode(b'67722217661354220482')\n"
                      '    ttest_ind([98, 11, 26], [86, 53, 89])\n'
                      '    Fernet.generate_key()\n'
                      '    time.sleep(0.06)\n'
                      '    shuffle([33, 59, 18])\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    datetime.datetime.now()\n'
                      '    try:\n'
                      '        LoopChecker12 = [10][0]\n'
                      '        LoopChecker22 = 9\n'
                      '        ConditionChecker16 = 925\n'
                      '        ConditionChecker26 = 203\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker12, LoopChecker22)):\n'
                      '            for newc_1 in text:\n'
                      '                if ConditionChecker16 & '
                      'ConditionChecker26:\n'
                      '                    if newc_1.isdigit():\n'
                      "                        if newc_1 == '0':\n"
                      "                            newc_1 = '.'\n"
                      '                        else:\n'
                      "                            newc_1 = '0' if newc_1 != "
                      "'1' else '.'\n"
                      '        else:\n'
                      '            pass\n'
                      "        return ''.join(list(text)).replace('.', '0')\n"
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_151. Total Time: 5.302942
END AT 2024-10-19 21:58:36.004057
